事件委托实现不同页面通信

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,5 +23,12 @@
             android:gravity="center"
             android:onClick="clickEventBus"
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Notifer"
+            android:gravity="center"
+            android:onClick="clickNotifer"
+            />
     </LinearLayout>
 </ScrollView>
